--- a/www/index.html
+++ b/www/index.html
@@ -1,25 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JARVIS</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 
   <link rel="shortcut icon" href="assets/images/logo.jpeg" type="image/x-icon">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
+
 <body>
 
-  <section id="Ovel" class="d-flex flex-column justify-content-center align-items-center vh-100">
-    <div class="square">
-      <span></span>
-      <span></span>
-      <span></span>
-      <img src="assets/vendores/Mr3W.gif" alt="jarvis" />
+  <div class="container">
+    <section id="Ovel mb-4">
+      <div class="square">
+        <span></span>
+        <span></span>
+        <span></span>
+        <img src="assets/vendores/Mr3W.gif" alt="jarvis" />
+      </div>
+      <h1>Rohan</h1>
+      <div class="com-md-12">
+        <div class="text-center">
+          <div id="text-input" class="d-flex">
+            <input type="text" name="chatbox" id="chatbox" placeholder="Type here ....." />
+            <button id="MicBtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
+            <button id="CShatBtn" class="glow-on-hover"><i class="bi bi-chat-dots"></i></button>
+            <button id="SettingBtn" class="glow-on-hover"><i class="bi bi-gear"></i></button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+   <section id="SiriWave" class="mb-4" hidden>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100vh;">
+          <p class="text-start text-light mb-4 siri-message">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum reprehenderit dicta maxime eaque nesciunt
+          </p>
+          <div id="siri-container"></div>
+        </div>
+      </div>
     </div>
-    <h1>Rohan</h1>
-  </section>
+  </div>
+</section>
+
+  </div>
+
 
   <!-- Dependencies (place at the end for performance) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -27,6 +60,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-fittext/1.2.0/jquery.fittext.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/textillate/0.4.0/jquery.textillate.min.js"></script>
   <script src="/eel.js"></script>
+  <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script>
+  <script src="main.js"></script>
 
 </body>
+
 </html>
