Add_Speck_And _Go_To_Hood

--- a/www/index.html
+++ b/www/index.html
@@ -16,14 +16,14 @@
 <body>
 
   <div class="container">
-    <section id="Ovel mb-4">
+    <section id="Ovel" class="mb-4">
       <div class="square">
         <span></span>
         <span></span>
         <span></span>
         <img src="assets/vendores/Mr3W.gif" alt="jarvis" />
       </div>
-      <h1>Rohan</h1>
+      <h1></h1>
       <div class="com-md-12">
         <div class="text-center">
           <div id="text-input" class="d-flex">
@@ -36,20 +36,20 @@
       </div>
     </section>
 
-   <section id="SiriWave" class="mb-4" hidden>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100vh;">
-          <p class="text-start text-light mb-4 siri-message">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum reprehenderit dicta maxime eaque nesciunt
-          </p>
-          <div id="siri-container"></div>
+    <section id="SiriWave" class="mb-4" hidden>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100vh;">
+              <p class="text-start text-light mb-4 siri-message fs-1">
+                Hello , I Am JARVIS
+              </p>
+              <div id="siri-container"></div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
   </div>
 
@@ -62,6 +62,7 @@
   <script src="/eel.js"></script>
   <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script>
   <script src="main.js"></script>
+  <script src="controller.js"></script>
 
 </body>
 
